WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188334
[iOS] Layout tests that send HID events cause WebKitTestRunner to crash on recent SDKs
https://bugs.webkit.org/show_bug.cgi?id=188334
Summary
[iOS] Layout tests that send HID events cause WebKitTestRunner to crash on re...
Wenson Hsieh
Reported
2018-08-05 15:42:45 PDT
<
rdar://problem/40630074
>
Attachments
Patch
(4.64 KB, patch)
2018-08-05 16:24 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2018-08-05 15:44:13 PDT
This is the exception being thrown: Application Specific Information: CRASHING TEST: fast/events/touch/ios/iphone7/force-press-event.html *** Terminating app due to uncaught exception 'WebKitTestRunnerTestProblem', reason: 'The test completed before all synthesized events had been handled. Perhaps you're calling notifyDone() too early?' terminating with uncaught exception of type NSException abort() called
Wenson Hsieh
Comment 2
2018-08-05 16:24:48 PDT
Created
attachment 346606
[details]
Patch
WebKit Commit Bot
Comment 3
2018-08-06 06:59:11 PDT
Comment on
attachment 346606
[details]
Patch Clearing flags on attachment: 346606 Committed
r234599
: <
https://trac.webkit.org/changeset/234599
>
WebKit Commit Bot
Comment 4
2018-08-06 06:59:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug